# oxidation

./: .env.example  .gitignore  .justfile  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  docker.just
.github/workflows/: verify.yml
.sqlx/: query-0d189d5b060ee182a963f19a706e9555c1f8d186ab50668aa3687f775893f051.json  query-0faba0a9425a02483d8f58260db84f0ed3050816ea7d29f9c72c5ccd55bacde5.json  query-121a212b06181c300c813884816e197a6fe243c3edd12457a21854ef94a45f4c.json  query-28c2fc92ffa1927541323958bb1bf493211d678bfa0b975c81451571ca2a3510.json  query-462d90dfa354f174d76a8a50f13500c108c063cabc76168c1c375e5e835977f7.json  query-64042cafc130ff948fa98f7734821b7263f6164992aba4ccaa86886240e3165c.json  query-6895c04b0dab672af8ddc78b1be0a4afe328eaacdaf4985daf93f25bb677ab95.json  query-b62ff1b7465379c72d5aef14009bdfaf67a71afe920884e677ff5baf8aa5f72c.json  query-bbc3d3e811abc6a95c304ba9821e3b0fef8ac11e1e7a780d79cc85022787f564.json  query-dfa93f4f0094b4154187bc50db9aa0bc3c2da228325f1dd539369e29bb10638f.json
api_tests/: create_job.hurl  health.hurl  hurl_env  root.hurl
axum-maud-sqlx/: .env  .gitignore  Cargo.toml  README.md
axum-maud-sqlx/config/: default.toml
axum-maud-sqlx/data/: dev.db
axum-maud-sqlx/src/: handlers.rs  model.rs  repository.rs  routing.rs
config/: default.toml
data/: dev.db
migrations/: 20250501072414_init_jobs.sql  20250517124946_descriptions.sql
src/: app.rs  config.rs  handlers.rs  health.rs  http_client.rs  http_types.rs  job_processor.rs  linux.rs  main.rs  model.rs  ox_env.rs  repository.rs  routing.rs  scraper.rs  show_jobs.rs  test.rs
src/assets/: basel.rs  daisy.rs  htmx.rs  mod.rs  tailwind.rs  themes.rs
src/jobs/: api.rs  filter.rs  job_card.rs  mod.rs  root.rs
(+2 files in other folders)
