[package]
name = "oxidation"
version = "0.1.0"
edition = "2024"
authors = ["rust Basel", "all its members"]


[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
env_logger = "0.11.8"
log = "0.4.27"
maud = "0.27.0"
mime = "0.3.17"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["tls-rustls", "runtime-tokio", "sqlite", "sqlx-sqlite"] }
config = "0.15.11"
futures = "0.3.31"
anyhow = { version = "1.0.98", features = ["backtrace"] }