[package]
name = "oxidation"
version = "0.1.0"
edition = "2024"
authors = ["rust Basel", "all its members"]


[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
indicatif = "0.18.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
rand = "0.9.2"
ureq = { version = "2.10", features = ["json"] }
serde_json = "1.0"
scraper = "0.18"
