[package]
name = "job-portal-place-holder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
axum = { version = "0.8.4", features = ["macros"] }
config = "0.15.11"
futures = "0.3.31"
maud = { version = "0.27.0", features = ["axum"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["tls-rustls", "runtime-tokio", "sqlite", "sqlx-sqlite"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
